# pg_punycode

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
crates/pg_punycode/: Cargo.toml  pg_punycode.control
crates/pg_punycode/src/: lib.rs
crates/pg_punycode/tests/pg_regress/expected/: domain.out  punycode.out
crates/pg_punycode/tests/pg_regress/sql/: domain.sql  punycode.sql  setup.sql
xtask/: Cargo.toml
xtask/src/: main.rs
