[package]
name = "pg_punycode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg19 = ["pgrx/pg19", "pgrx-tests/pg19"]
pg_test = []
pg_bench = ["dep:pgrx-bench"]

[dependencies]
idna = { workspace = true }
pgrx = { workspace = true }
pgrx-bench = { workspace = true, optional = true }

[dev-dependencies]
pgrx-tests = { workspace = true }
